# gaia

./: LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  benchmark.py  pyproject.toml  requirements.txt  test_gaia.py
docs/: README.md
docs/architecture/: advanced-plasticity.md  core-components.md  hierarchy.md  overview.md  plasticity-system.md
docs/development/: roadmap.md
docs/guides/: pytorch-integration.md  quickstart.md  validation.md
docs/research/: future-directions.md
docs/science/: theoretical-foundations.md
gaia/: __init__.py
gaia/config/: __init__.py  defaults.py
gaia/core/: __init__.py  base.py  tensor.py  types.py
gaia/examples/: __init__.py  basic_demo.py  gaia_v3_1_demo.py  meta_learning_demo.py  plasticity_demo.py
gaia/hierarchy/: __init__.py  level.py  manager.py
gaia/layers/: __init__.py  hebbian.py  reactive.py  temporal.py
gaia/meta_learning/: __init__.py  metrics.py  optimizer.py
gaia/plasticity/: __init__.py  controller.py  es_optimizer.py  rules.py
gaia/utils/: __init__.py  logging.py  visualization.py
